--- a/epic_site/src/styles/small-group.css
+++ b/epic_site/src/styles/small-group.css
@@ -11,11 +11,10 @@ panel-color:'rgb(238, 200, 199)';
   width: 100%;
   margin-bottom: -20%;
 }
-.pink-panel{
+.sg-panel{
   position: relative;
   height: 50%;
   width: 80%;
-  background-color: rgb(238, 200, 199);
   margin: 5% auto;
   padding: 2% 6%;
   display: flex;
@@ -24,35 +23,14 @@ panel-color:'rgb(238, 200, 199)';
   justify-content: space-between;
   text-align: center;
 }
-.pink-panel-title{
-  background-color: rgb(220, 159, 158);
-  padding-left: 2%;
-  position: absolute;
-  height: 5vw;
-  width: 25vw;
-  top: 5%;
-  left: 13%;
-  z-index: 2;
-  line-height: 5vw;
-  font-size: 2.5vw;
-  color: white;
+.pink-panel.sg-panel {
+  background-color: rgb(238, 200, 199);
+}
+.blue-panel.sg-panel {
+  background-color: rgb(173, 183, 195);
 }
 
-.blue-panel{
-  position: relative;
-  height: 50%;
-  width: 80%;
-  background-color: rgb(173, 183, 195);
-  margin: 5% auto;
-  padding: 2% 6%;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: space-between;
-  text-align: center;
-}
-.blue-panel-title{
-  background-color: rgb(133, 148, 165);
+.sg-panel-title{
   padding-left: 2%;
   position: absolute;
   height: 5vw;
@@ -63,6 +41,15 @@ panel-color:'rgb(238, 200, 199)';
   line-height: 5vw;
   font-size: 2.5vw;
   color: white;
+  box-shadow: .5vw .5vw;
+}
+
+.pink-panel.sg-panel-title {
+  background-color: rgb(220, 159, 158);
+}
+
+.blue-panel.sg-panel-title {
+  background-color: rgb(133, 148, 165);
 }
 
 #sg-title-back-panel {
@@ -93,19 +80,22 @@ panel-color:'rgb(238, 200, 199)';
   background-color: white;
   height: 60%;
   width: 100%;
-  font-size: .8vw;
+  font-size: calc(7px + .4vw);
   bottom: 0;
   line-height: 1.5vw;
   border-radius: 8px;
   border-style: solid;
   border-color: rgba(0, 0, 0, .3);
   border-width: 2px;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  align-items: center;
 }
 .sg-card-content{
   position: absolute;
-  bottom: 10%;
-  padding-bottom: 4%;
-  padding-left: 12%;
+  bottom: 0;
+  padding: 10%;
 }
 .sg-leader-img-wrapper{
   filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 1));
